Project

General

Profile

Actions

Bug #23885

closed

MDSMonitor: overzealous MDS_ALL_DOWN and MDS_UP_LESS_THAN_MAX health warnings during FS creation

Added by John Spray almost 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
High
Category:
Administration/Usability
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
task(easy)
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This is what we currently get when starting with vstart, which creates MDS daemons before creating the filesystem:

2018-04-26 07:02:50.411773 [INF]  daemon mds.b is now active in filesystem cephfs_a as rank 0 
2018-04-26 07:02:50.362801 [INF]  Cluster is now healthy 
2018-04-26 07:02:50.362769 [INF]  Health check cleared: MDS_UP_LESS_THAN_MAX (was: 1 filesystem is online with fewer MDS than max_mds) 
2018-04-26 07:02:50.362727 [INF]  Health check cleared: MDS_ALL_DOWN (was: 1 filesystem is offline) 
2018-04-26 07:02:50.362596 [INF]  daemon mds.b assigned to filesystem cephfs_a as rank 0 (now has 1 ranks) 
2018-04-26 07:02:49.342879 [WRN]  Health check failed: 1 filesystem is online with fewer MDS than max_mds (MDS_UP_LESS_THAN_MAX) 
2018-04-26 07:02:49.342839 [ERR]  Health check failed: 1 filesystem is offline (MDS_ALL_DOWN) 
2018-04-26 07:02:45.918532 [INF]  osd.0 172.21.9.34:6801/4312 boot 
2018-04-26 07:02:34.291164 [INF]  Manager daemon x is now available 
2018-04-26 07:02:34.267433 [INF]  Activating manager daemon x 
2018-04-26 07:02:31.616329 [INF]  mon.a is new leader, mons a in quorum (ranks 0) 

The user hasn't done anything wrong here: the MDSs are already running when the FS is created, so the FS should come up cleanly without generating any health errors or warnings.

Actions #1

Updated by Patrick Donnelly almost 6 years ago

  • Subject changed from Overzealous MDS_ALL_DOWN and MDS_UP_LESS_THAN_MAX health warnings during FS creation to MDSMonitor: overzealous MDS_ALL_DOWN and MDS_UP_LESS_THAN_MAX health warnings during FS creation
  • Assignee set to Patrick Donnelly
  • Priority changed from Normal to High
  • Target version set to v13.0.0
  • Source set to Development
  • Component(FS) MDSMonitor added
  • Labels (FS) task(easy) added
Actions #2

Updated by Patrick Donnelly almost 6 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Patrick Donnelly almost 6 years ago

  • Target version changed from v13.0.0 to v14.0.0
  • Backport set to mimic
Actions #4

Updated by Patrick Donnelly almost 6 years ago

  • Target version changed from v14.0.0 to v13.2.0
  • Backport deleted (mimic)
Actions #5

Updated by Patrick Donnelly almost 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF