MDSMonitor: promote standby after fs creation

This avoids unnecessary health warnings. However, the original issue in i23885
still exists because the standbys are not available at fs creation time. If you
create a new file system after these standbys are available, then you will
observe that the promotion works to silence the warnings.

Fixes: http://tracker.ceph.com/issues/23885

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>